# code-library

./: CMakeLists.txt  Readme.md
include/: algorithm_driver.h  algorithms.h  data_structure.h  data_structure_driver.h  dynamic_programming.h  dynamic_programming_driver.h
src/algorithm/: kadanes.cpp
src/algorithm/pattern_matching/: KMP.cpp  RabinKarp.cpp
src/algorithm/range_query/: SparseTable.cpp  SquareRootDecomposition.cpp  mos.cpp
src/algorithm/sorting/: quicksort.cpp
src/data-structure/LinkedList/: SinglyLinkedList.cpp  SinglyLinkedList.h
src/dynamic-programming/: longestCommonSubsequence.cpp
src/greedy/: FractionalKnapsack.cpp
